--- a/doc/manual.latex
+++ b/doc/manual.latex
@@ -29,6 +29,56 @@
 \begin{document}
 \maketitle
 \tableofcontents
+\cleardoublepage
+\dictum[Clarence "Kelly" Johnson]{Keep it simple, stupid!}
+
+\chapter{Version control with git}
+\section{Basic tasks}
+\todo{Make a cake}\missingfigure{Hallo}
+\section{Managing multiple repositories}
+To get a copy of the repository you want to work with and enter it, type the following code. 
+\begin{lstlisting}[style=BashInputStyle]
+git clone URL/of/your/repository
+cd repository
+\end{lstlisting}
+
+The feature that git offers to mangage multiple repositories with one top-level repository, is called submodules\index{submodule}.
+Submodules are therefore other git repositories and git allows you to specify which state of the submodule(s) belong to a certain commit of your main repository.
+To be able to work with multiple repositories you need to initialize git's submodule feature.
+This has to be done every time someone has changed the .gitmodules file by adding a submodule with \lstinline[style=BashInputStyle]'git submodule add' and you have just pulled the supermodule and want to work with the new submodule(s).
+\begin{lstlisting}[style=BashInputStyle]
+git submodule init
+\end{lstlisting}
+
+If you want to add another submodule to a repository type the following code.
+This can only be done after you've initialized the submodule feature.
+Git will automatically clone the submodule into your repository.
+Afterwards you'll have to commit your submodule's current state (HEAD commit) to your supermodule.
+\begin{lstlisting}[style=BashInputStyle]
+git submodule add URL/of/your/submodule optional/path
+git commit -m ``added submodule''
+\end{lstlisting}
+
+Any time you want to want to update your submodules your can just type the following.
+This will bring your submodules to the state that has most recently been committed to your supermodule.
+\begin{lstlisting}[style=BashInputStyle]
+git submodule update
+\end{lstlisting}
+
+If you want to commit the current state of a submodule to your supermodule, you can just added the directory name of your submodule as if it were a normal file.
+\begin{lstlisting}[style=BashInputStyle]
+git add path/to/your/submodule
+git commit -m ``changed submodule''
+\end{lstlisting}
+If multiple users commit different states of a submodule to the supermodule and a submodule's state has to be merged, then git will choose the submodule state of the later commit.
+
+If you want to ignore a submodule completely (i.e. \lstinline[style=BashInputStyle]'git submodule update' should not try to update it) you have to de-initialize the repository. This will not remove the submodule's directory or stage changes to be commited.
+It is useful when you don't have access to the submodules URL. This feature needs at least version 1.8.3 of git.
+\begin{lstlisting}[style=BashInputStyle]
+git submodule deinit path/to/your/submodule
+\end{lstlisting}
+
+\begin{appendix}
 \chapter{timing}
 \def \degr {${}^\circ $}
 \begin{tikztimingtable}
@@ -95,53 +145,8 @@ at(7,-8.45){\tiny clocked};
 at(7,-12.8){\tiny positiveedgetriggered};
 \end{pgfonlayer}
 \end{tikztimingtable}
+\end{appendix}
 
-
-\chapter{Version control with git}
-\section{Basic tasks}
-\todo{Make a cake}\missingfigure{Hallo}
-\section{Managing multiple repositories}
-To get a copy of the repository you want to work with and enter it, type the following code. 
-\begin{lstlisting}[style=BashInputStyle]
-git clone URL/of/your/repository
-cd repository
-\end{lstlisting}
-
-The feature that git offers to mangage multiple repositories with one top-level repository, is called submodules\index{submodule}.
-Submodules are therefore other git repositories and git allows you to specify which state of the submodule(s) belong to a certain commit of your main repository.
-To be able to work with multiple repositories you need to initialize git's submodule feature.
-This has to be done every time someone has changed the .gitmodules file by adding a submodule with \lstinline[style=BashInputStyle]'git submodule add' and you have just pulled the supermodule and want to work with the new submodule(s).
-\begin{lstlisting}[style=BashInputStyle]
-git submodule init
-\end{lstlisting}
-
-If you want to add another submodule to a repository type the following code.
-This can only be done after you've initialized the submodule feature.
-Git will automatically clone the submodule into your repository.
-Afterwards you'll have to commit your submodule's current state (HEAD commit) to your supermodule.
-\begin{lstlisting}[style=BashInputStyle]
-git submodule add URL/of/your/submodule optional/path
-git commit -m ``added submodule''
-\end{lstlisting}
-
-Any time you want to want to update your submodules your can just type the following.
-This will bring your submodules to the state that has most recently been committed to your supermodule.
-\begin{lstlisting}[style=BashInputStyle]
-git submodule update
-\end{lstlisting}
-
-If you want to commit the current state of a submodule to your supermodule, you can just added the directory name of your submodule as if it were a normal file.
-\begin{lstlisting}[style=BashInputStyle]
-git add path/to/your/submodule
-git commit -m ``changed submodule''
-\end{lstlisting}
-If multiple users commit different states of a submodule to the supermodule and a submodule's state has to be merged, then git will choose the submodule state of the later commit.
-
-If you want to ignore a submodule completely (i.e. \lstinline[style=BashInputStyle]'git submodule update' should not try to update it) you have to de-initialize the repository. This will not remove the submodule's directory or stage changes to be commited.
-It is useful when you don't have access to the submodules URL.
-\begin{lstlisting}[style=BashInputStyle]
-git submodule deinit path/to/your/submodule
-\end{lstlisting}
 \backmatter
 \printindex
 \end{document}
