--- a/doc/repository.tex
+++ b/doc/repository.tex
@@ -4,8 +4,9 @@
 	\item[doc]
 	\item[env]
 	\item[rundirs]
-		is a directory containing at least a \wscript and a link to the waf binary. It defines one or more tasks.
-		takes one or more input files of one or more units and modifies them according to the specification in the \wscript.
+		is a directory containing at least a \tf{wscript} and a link to the waf binary. It defines one or more tasks.
+		takes one or more input files of one or more units and modifies them
+		according to the specification in the \tf{wscript}.
 		A task is specified via a wscript and executed with waf.
 
 		Example tasks:
