--- a/doc/waf_usage.tex
+++ b/doc/waf_usage.tex
@@ -1,7 +1,8 @@
-\chapter{Basic waf usage}
+\chapter{Basic Waf usage}
+\label{chap:waf}
 
-\lstbash
- ./waf configure
- ./waf build
-\end{minted}
+%\lstbash{
+%./waf configure
+%./waf build
+%}
 
