added installation sections, added calibre chapter, added dos/donts chapter, added mixed-signal recipes

--- a/doc/glossary.tex
+++ b/doc/glossary.tex
@@ -1,4 +1,7 @@
 \newacronym{ASIC}{ASIC}{Application\hyp{}specific Integrated Circuit}
 \newacronym{HDL}{HDL}{Hardware Description Language}
 \newacronym{cds}{CDS}{Cadence Design Library}
-
+\newacronym{LVS}{LVS}{Layout vs. Schematic Check}
+\newacronym{DRC}{DRC}{Design Rule Check}
+\newacronym{PEX}{PEX}{Parasitics Extraction}
+\newacronym{RVM}{RVM}{Real-Valued Modelling}
