--- a/doc/waf_usage.tex
+++ b/doc/waf_usage.tex
@@ -1,8 +1,8 @@
 \chapter{Basic Waf usage}
 \label{chap:waf}
 
-%\lstbash{
-%./waf configure
-%./waf build
-%}
+\begin{lstbash}
+./waf configure
+./waf build
+\end{lstbash}
 
